--- a/Makefile_cosma
+++ b/Makefile_cosma
@@ -28,6 +28,7 @@ all:
 	# make minIni
 	mkdir -p lib
 	mkdir -p cache
+	mkdir -p output
 	$(GCC) src/random.c -c -o lib/random.o $(INCLUDES) $(CFLAGS)
 	$(GCC) src/grf.c -c -o lib/grf.o $(INCLUDES) $(CFLAGS)
 	$(GCC) src/fft.c -c -o lib/fft.o $(INCLUDES) $(CFLAGS)
